# linux-commands-on-windows

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .clang-format  .clang-tidy  c.cpp  cat.cpp  cc.cpp  cdm.cpp  ci.cpp  cr.cpp  cu.cpp  ga.cpp  gb.cpp  gch.cpp  gcl.cpp  gcm.cpp  gd.cpp  gfp.cpp  gl.cpp  gm.cpp  gp.cpp  gpl.cpp  grep.cpp  grh.cpp  gs.cpp  gsh.cpp  gsp.cpp  gst.cpp  gsw.cpp  htop.cpp  ls.cpp  man.cpp  ni.cpp  nr.cpp  nrb.cpp  nrd.cpp  nrs.cpp  pa.cpp  pam.cpp  pamr.cpp  pas.cpp  pat.cpp  (+2 more)
